# cookiecutter-python-template

./: cookiecutter.json
{{ cookiecutter.distribution_name }}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
{{ cookiecutter.distribution_name }}/data/: index.html
{{ cookiecutter.distribution_name }}/docs/: conf.py  history.rst  index.rst  make.bat  packaging.rst
{{ cookiecutter.distribution_name }}/requirements/: dev.pip  docs.pip  private-repos.pip  test.pip
{{ cookiecutter.distribution_name }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.distribution_name }}/tests/: test_{{ cookiecutter.package_name }}.py
