[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
float_to_top = true
src_paths = ["{{ cookiecutter.package_source }}", "tests"]

[tool.coverage.run]
source = ["{{ cookiecutter.package_source }}"]

[tool.pytest.ini_options]
addopts = "--tb=short --strict-markers"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,flake8,isort,manifest,docs,mypy,black
minversion = 2.1.0

[testenv]
basepython = python3.6
install_command = pip install {opts} {packages}
deps =
  -rrequirements/private-repos.pip
  -rrequirements/test.pip
isolated_build=true
commands =
  make coverage
passenv =
  SPHINXOPTS_BUILD
  SPHINXOPTS_LINKCHECK
allowlist_externals = make

[testenv:flake8]
commands =
  make test-flake8
allowlist_externals = make
skip_install = True

[testenv:isort]
commands =
  make test-isort
allowlist_externals = make
skip_install = True

[testenv:manifest]
commands =
  make test-manifest
allowlist_externals = make
skip_install = True

[testenv:mypy]
commands =
  make test-mypy
allowlist_externals = make

[testenv:docs]
deps =
  -rrequirements/private-repos.pip
  -rrequirements/test.pip
  -rrequirements/docs.pip
commands =
  make docs BUILDDIR={envtmpdir} SPHINXOPTS={env:SHINXOPTS_BUILD:''}
  doc8 docs/
allowlist_externals =
  make
  doc8

[testenv:black]
commands =
  make test-black
allowlist_externals = make
skip_install = True
"""
